--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,14 @@
 .pageBtn {
   width: 30px;
   padding:0 8px;
-  border: 1px solid gray;
+  border-radius: 15px;
   margin: 10px;
   text-decoration: none;
+  border: none;
+  outline: none;
+  color: rgb(161, 16, 108);
+  font-size: 20px;
+  font-weight: 600;
 }
 
 
