--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -2,19 +2,37 @@
     font-size: 18px;
     justify-content: center;
     text-align: center;
-     border: 1px solid gray;
+    border: 1px solid gray;
     margin: 10px;
     width: 250px;
     padding: 5px;
-    background-color: rgb(223, 170, 196);
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: 5px 10px 18px #888888;
 }
 
 .card img {
     width: 200px;
+    border-radius: 50%;
 }
 
-.pageBtn {
-    color: black;
-    background-color: blanchedalmond;
-    border: 1px solid gray;
+.details-btn {
+    text-decoration: none;
+    color: rgb(119, 6, 78);
+    font-weight: 600;
+}
+
+.add-btn {
+    display: block;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    padding: 5px 0;
+    color: white;
+    background-color: rgb(161, 16, 108);
+    border-radius: 15px;
+    border: none;
+    outline: none;
+    margin: 10px auto;
+    
 }
