--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -13,8 +13,17 @@
 }
 
 .remove {
-    width: 50%;
-    padding: 5px;
+    display: block;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    padding: 5px 0;
+    color: white;
+    background-color: rgb(161, 16, 108);
+    border-radius: 15px;
+    border: none;
+    outline: none;
+    margin: 10px auto;
 }
 
 .checkout-controls input {
