--- a/src/pages/Product/Product.css
+++ b/src/pages/Product/Product.css
@@ -1,9 +1,20 @@
 .Product {
     width: 100%;
-    background-color: rgb(235, 229, 234);
+    background-color: white;
     margin-top: 30px;
+    text-align: center;
+    
 }
 
 .Product img {
     width: 40%;
+    height: 30%;
+    border-radius: 50%;
+    border: 2px solid rgb(161, 16, 108);
+    padding: 3px;
+
+}
+
+.product-content {
+    font-size: 20px;
 }
